style: RSS-GRAPHI-3_07 fix gap

--- a/src/app/restapi/page.module.scss
+++ b/src/app/restapi/page.module.scss
@@ -16,5 +16,9 @@
     flex-direction: column;
     align-items: center;
     gap: 40px;
+
+    @media screen and (max-width: 425px) {
+      gap: 20px;
+    }
   }
 }
